fixed topheader collapse issue

--- a/src/components/dashboard/dashboard.css
+++ b/src/components/dashboard/dashboard.css
@@ -86,6 +86,8 @@
     }
     #sidebar-wrapper {
       width: 240px !important;
+      height: 100% !important;
+      padding: 0%;
     }
     .page-content-wrapper {
       padding: 20px 40px 20px 40px;
@@ -116,9 +118,13 @@
       margin-top: 20px;
       width: 248px;
     }
-    #sidebar-wrapper{
+    /* #sidebar-wrapper{
         top: 58px;
-    }
+    } */
+    #sidebar-wrapper{
+      top: 66px;
+       border: 0;
+  }
     .contentheading {
         margin-top: 50px;
     }
